--- a/mysite/spotifyWrapped/templates/spotifyWrapped/slideshow.html
+++ b/mysite/spotifyWrapped/templates/spotifyWrapped/slideshow.html
@@ -102,12 +102,16 @@
 </div>
     
 <div class="slide" id="genre-persona-slide">
-    <h1>Your Music Persona</h1>
-    <div class="persona-section">
-        <div class="persona-text">
-            {{ slideshow_data.genre_persona }}
+    <h2>Your Music Persona</h2>
+    <ul class="slide-7">
+        <div class="slide-content">
+            <div class="persona-section">
+                <div class="persona-text">
+                    {{ slideshow_data.genre_persona }}
+                </div>
+            </div>
         </div>
-    </div>
+    </ul>
 </div>
 
 
